updated base styles and commenting style

--- a/sass/generic/_reset.scss
+++ b/sass/generic/_reset.scss
@@ -1,6 +1,8 @@
-//////////////////////////////
-// reset
-//////////////////////////////
+// # reset
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+
 @viewport{
   zoom: 1.0;
   width: device-width;
