--- a/sass/base/_skeleton.scss
+++ b/sass/base/_skeleton.scss
@@ -1,9 +1,11 @@
+// # skeleton
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+
 //////////////////////////////
-// skeleton
+// # layout
 //////////////////////////////
-/*------------------------------------*\
-  #layout
-\*------------------------------------*/
 html, body {
   width: 100%;
   height: 100%;
@@ -35,9 +37,9 @@ footer {
   margin-top: 6rem;
 }
 
-/*------------------------------------*\
-  #headline
-\*------------------------------------*/
+//////////////////////////////
+// # title
+//////////////////////////////
 h1, h2, h3, h4, h5, h6 {
   display: block;
   line-height: 1;
@@ -64,9 +66,9 @@ h5, h6 {
   font-size: 1em;
 }
 
-/*------------------------------------*\
-  #list
-\*------------------------------------*/
+//////////////////////////////
+// # list
+//////////////////////////////
 ul, ol {
   padding: .25rem 0;
   list-style-position: inside;
@@ -94,9 +96,9 @@ li + li {
   margin-top: .25rem;
 }
 
-/*------------------------------------*\
-  #typography
-\*------------------------------------*/
+//////////////////////////////
+// # text
+//////////////////////////////
 p {
   margin-top: 2rem;
 
@@ -124,9 +126,15 @@ blockquote {
   &:after  { content: "\201D"; }
 }
 
-/*------------------------------------*\
-  #link
-\*------------------------------------*/
+pre,
+code {
+  word-wrap: normal;
+  white-space: pre-wrap;
+}
+
+//////////////////////////////
+// # link
+//////////////////////////////
 a {
   text-decoration: none;
   color: green;
@@ -139,9 +147,9 @@ a {
   }
 }
 
-/*------------------------------------*\
-  #media
-\*------------------------------------*/
+//////////////////////////////
+// # media
+//////////////////////////////
 img {
   display: block;
   width: 100%;
@@ -152,9 +160,9 @@ figcaption {
   font-size: .9em;
 }
 
-/*------------------------------------*\
-  #table
-\*------------------------------------*/
+//////////////////////////////
+// # table
+//////////////////////////////
 table {
   table-layout: fixed;
   width: 100%;
@@ -178,9 +186,9 @@ th, td {
   }
 }
 
-/*------------------------------------*\
-  #form
-\*------------------------------------*/
+//////////////////////////////
+// # form
+//////////////////////////////
 fieldset {
   margin-top: 1.5rem;
 
