--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,25 +1,17 @@
-//////////////////////////////
-// section
-//////////////////////////////
-/*------------------------------------*\
-  #group
-\*------------------------------------*/
-// unit
-///////////////
-
+// # settings
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
 
 //////////////////////////////
-// settings
+// # typography
 //////////////////////////////
-/*------------------------------------*\
-  #typography
-\*------------------------------------*/
 $pri-family: helvetica, arial, sans-serif;
 $sec-family: georgia, serif;
 
-/*------------------------------------*\
-  #swatch
-\*------------------------------------*/
+//////////////////////////////
+// # swatch
+//////////////////////////////
 $black: #111;
 $base: #333;
 $neutral-1: #666;
@@ -29,37 +21,49 @@ $neutral-4: #eee;
 $white: #fff;
 
 
-//////////////////////////////
-// tool
-//////////////////////////////
+
+// # utility
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
 @import "breakpoint";
-@import "tool/eq";
-@import "tool/mixins";
+@import "utility/eq";
+@import "utility/mixins";
+@import "utility/styleguide";
 
 
-//////////////////////////////
-// base
-//////////////////////////////
-@import "base/reset";
+
+// # generic
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+@import "generic/reset";
+
+
+
+// # base
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
 @import "base/skeleton";
 
 
-//////////////////////////////
-// element
-//////////////////////////////
-@import "element/layout";
+
+// # element
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-//////////////////////////////
-// component
-//////////////////////////////
+
+// # component
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-//////////////////////////////
-// composition
-//////////////////////////////
 
-
-//////////////////////////////
-// page
-//////////////////////////////
+// # page
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
