updated base stylings

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -53,7 +53,8 @@ $white: #fff;
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
-
+@import "element/basic-list";
+@import "element/preamble";
 
 
 // # component
