--- a/sass/utility/_styleguide.scss
+++ b/sass/utility/_styleguide.scss
@@ -3,6 +3,12 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
+.sg {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 4rem 2rem;
+}
+
 //////////////////////////////
 // # section
 //////////////////////////////
@@ -64,4 +70,19 @@
 
 .sg__icon-label {
   margin-bottom: .5rem;
+}
+
+//////////////////////////////
+// # code block
+//////////////////////////////
+.sg__code-block {
+  margin-top: 1.5rem;
+  margin-bottom: 3rem;
+  padding: 1rem;
+  background-color: #eee;
+}
+
+.sg__code-block-title {
+  margin-bottom: .5rem;
+  font-size: 1em;
 }
