--- a/sass/base/_skeleton.scss
+++ b/sass/base/_skeleton.scss
@@ -13,7 +13,7 @@ html, body {
 
 body {
   font-family: $pri-family;
-  line-height: 1.6;
+  line-height: 1.4;
   color: $base;
 }
 
@@ -25,8 +25,8 @@ header {
   margin-bottom: 2rem;
 }
 
-section + section {
-  margin-top: 4rem;
+section {
+  margin: 4rem 0;
 }
 
 aside {
@@ -43,7 +43,7 @@ footer {
 h1, h2, h3, h4, h5, h6 {
   display: block;
   line-height: 1;
-  font-weight: 900;
+  font-weight: bold;
 }
 
 h1 {
@@ -85,26 +85,39 @@ ol ol {
 }
 
 dt {
-  font-weight: 500;
+  font-weight: bold;
 }
 
 dd {
   margin-left: 1rem;
+  margin-top: .25rem;
+  margin-bottom: .25rem;
 }
 
-li + li {
-  margin-top: .25rem;
+li {
+  margin: .25rem 0;
 }
 
 //////////////////////////////
 // # text
 //////////////////////////////
 p {
-  margin-top: 2rem;
+  margin: 2rem 0;
+}
 
-  &:first-letter {
-    margin-left: 2rem;
-  }
+sub, sup {
+  position: relative;
+  margin: 0 0.25em;
+  font-size: 75%;
+  line-height: 0;
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
 }
 
 small {
@@ -137,13 +150,13 @@ code {
 //////////////////////////////
 a {
   text-decoration: none;
-  color: green;
-  border-bottom: 2px solid green;
+  color: $neutral-2;
+  border-bottom: 2px solid $neutral-2;
 
   &:hover,
   &:focus {
-    color: darkgreen;
-    border-color: darkgreen;
+    color: $neutral-1;
+    border-color: $neutral-1;
   }
 }
 
@@ -199,7 +212,7 @@ fieldset {
 
 legend {
   font-size: .9em;
-  font-weight: 500;
+  font-weight: bold;
   text-transform: uppercase;
 }
 
