added more styles to foundation, added a code block component

--- a/sass/base/_skeleton.scss
+++ b/sass/base/_skeleton.scss
@@ -176,26 +176,64 @@ figcaption {
 //////////////////////////////
 // # table
 //////////////////////////////
+// table {
+//   table-layout: fixed;
+//   width: 100%;
+//   text-align: left;
+// }
+
+// caption {
+//   margin-bottom: 1rem;
+//   text-align: left;
+// }
+
+// th, td {
+//   padding: .125rem .25rem;
+
+//   &:first-child {
+//     padding-left: 0;
+//   }
+
+//   &:last-child {
+//     padding-right: 0;
+//   }
+// }
+
 table {
   table-layout: fixed;
   width: 100%;
+  border: 2px solid $neutral-2;
   text-align: left;
 }
 
 caption {
-  margin-bottom: 1rem;
+  margin-bottom: 0.25rem;
   text-align: left;
+  color: $black;
+  font-weight: bold;
 }
 
 th, td {
-  padding: .125rem .25rem;
+  padding-left  : 0.5rem;
+  padding-top   : 0.25rem;
+  padding-right : 0.5rem;
+  padding-bottom: 0.25rem;
 
-  &:first-child {
-    padding-left: 0;
+  &[scope="col"] {
+    padding-top   : 0.65rem;
+    padding-bottom: 0.5rem;
+    border-right : 1px solid $neutral-2;
+    border-bottom: 1px solid $neutral-2;
+    text-transform: uppercase;
+    line-height: 1;
+
+    &:last-child {
+      border-right: none;
+    }
   }
 
-  &:last-child {
-    padding-right: 0;
+  &[scope="row"] {
+    border-right: 1px solid $neutral-2;
   }
 }
 
@@ -211,17 +249,13 @@ fieldset {
 }
 
 legend {
-  font-size: .9em;
+  margin-bottom: .25rem;
   font-weight: bold;
-  text-transform: uppercase;
-}
-
-label {
-  font-size: .9em;
-  text-transform: capitalize;
 }
 
 input, textarea, select {
+  display: block;
+  width: 100%;
   color: $neutral-1;
 }
 
@@ -231,6 +265,14 @@ $form_placeholder_prefixes: ('::-webkit-input-placeholder', ':-moz-placeholder',
   textarea[placeholder]#{$prefix} {
     color: $neutral-2;
   }
+}
+
+input[type="text"],
+input[type="date"],
+input[type="email"],
+input[type="tel"],
+textarea {
+  padding-top: 0.5rem;
 }
 
 textarea {
