--- a/sass/utility/_styleguide.scss
+++ b/sass/utility/_styleguide.scss
@@ -48,6 +48,10 @@
 //////////////////////////////
 // # swatch
 //////////////////////////////
+.sg__swatch-table {
+  border: none;
+}
+
 .sg__swatch {
   padding: 2rem !important;
 }
