--- a/sass/style.scss
+++ b/sass/style.scss
@@ -61,7 +61,7 @@ $white: #fff;
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
-
+@import "component/form";
 
 
 // # page
