added composition folder and section to sass

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -56,11 +56,20 @@ $white: #fff;
 @import "element/basic-list";
 
 
+
 // # component
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 @import "component/form";
+
+
+
+// # composition
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 
 // # page
