setup watch and live reload

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -78,7 +78,7 @@ $white: #fff;
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
 .index__headline {
-  color: red;
+  color: green;
 }
 
 
