update grunt file to include watching sass partials, refactor and remove style guide initially

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,24 +1,8 @@
-// # settings
+// # setting
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
-
-//////////////////////////////
-// # typography
-//////////////////////////////
-$pri-family: helvetica, arial, sans-serif;
-$sec-family: georgia, serif;
-
-//////////////////////////////
-// # swatch
-//////////////////////////////
-$black: #111;
-$base: #333;
-$neutral-1: #666;
-$neutral-2: #999;
-$neutral-3: #ccc;
-$neutral-4: #eee;
-$white: #fff;
+@import "setting/variables";
 
 
 
@@ -54,6 +38,7 @@ $white: #fff;
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 @import "element/basic-list";
+@import "element/form";
 
 
 
@@ -61,7 +46,6 @@ $white: #fff;
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
-@import "component/form";
 
 
 
@@ -76,9 +60,5 @@ $white: #fff;
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
-
-.index__headline {
-  color: green;
-}
 
 
