--- a/sass/base/_skeleton.scss
+++ b/sass/base/_skeleton.scss
@@ -12,7 +12,7 @@ html, body {
 }
 
 body {
-  font-family: $pri-family;
+  font-family: $pri-font;
   line-height: 1.4;
   color: $base;
 }
@@ -133,7 +133,7 @@ blockquote {
   max-width: 30rem;
   margin: 1.5rem auto;
   padding: 0 1rem;
-  font-family: $sec-family;
+  font-family: $pri-font;
 
   &:before { content: "\201C"; }
   &:after  { content: "\201D"; }
