--- a/sass/base/_skeleton.scss
+++ b/sass/base/_skeleton.scss
@@ -6,13 +6,18 @@
 //////////////////////////////
 // # layout
 //////////////////////////////
-html, body {
-  width: 100%;
-  height: 100%;
+@viewport{
+  zoom: 1.0;
+  width: device-width;
 }
 
-body {
-  font-family: $pri-font;
+@-ms-viewport {
+  zoom: 1.0;
+  width: device-width;
+}
+
+html {
+  font-family: $pri-font--reg;
   line-height: 1.4;
   color: $base;
 }
@@ -133,7 +138,6 @@ blockquote {
   max-width: 30rem;
   margin: 1.5rem auto;
   padding: 0 1rem;
-  font-family: $pri-font;
 
   &:before { content: "\201C"; }
   &:after  { content: "\201D"; }
@@ -186,7 +190,7 @@ table {
 caption {
   margin-bottom: 0.25rem;
   text-align: left;
-  color: $black;
+  color: $base;
   font-weight: bold;
 }
 
