--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,19 +1,26 @@
-// # setting
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-@import "setting/variables";
-
-
-
 // # utility
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
+
+//////////////////////////////
+// # dependencies
+//////////////////////////////
 @import "breakpoint";
-@import "utility/eq";
 @import "utility/mixins";
-@import "utility/styleguide";
+// @import "utility/grid";
+// @import "utility/font-face";
+
+// *
+// element query (eq.js)
+// non-default javascript enhancement tool for allowing finer control over
+// component appearance in different compositions
+// @import "utility/eq";
+
+//////////////////////////////
+// # variables
+//////////////////////////////
+@import "utility/variables";
 
 
 
@@ -30,7 +37,20 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 @import "base/skeleton";
+@import "base/grid";
 
+//////////////////////////////
+// # archetype
+//////////////////////////////
+// *
+// style guide
+// template styles when developing a style guide
+// @import "base/styleguide";
+
+// *
+// document
+// template styles when developing a document
+// @import "base/document";
 
 
 // # element
