--- a/sass/utility/_variables.scss
+++ b/sass/utility/_variables.scss
@@ -25,7 +25,10 @@ $white: #fff;
 // # layout
 //////////////////////////////
 $col-count: 12;
-$gutter: 1.5rem;
+
+$gutter: 0.75rem;
+$gutter--m: 1rem;
+$gutter--l: 1.25rem;
 
 //////////////////////////////
 // # media size
