--- a/sass/style.scss
+++ b/sass/style.scss
@@ -37,19 +37,21 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 @import "base/skeleton";
 @import "base/grid";
+@import "base/title";
+@import "base/form";
 
 //////////////////////////////
 // # archetype
 //////////////////////////////
 // *
-// style guide
-// template styles when developing a style guide
-// @import "base/styleguide";
-
-// *
 // document
 // template styles when developing a document
 // @import "base/document";
+
+// *
+// style guide
+// template styles when developing a style guide
+// @import "base/styleguide";
 
 
 
