add basic document archetype styling

--- a/sass/base/_skeleton.scss
+++ b/sass/base/_skeleton.scss
@@ -22,7 +22,7 @@ body {
   color: $base;
 }
 
-header, article, section, aside, footer {
+header, nav, article, section, aside, footer {
   margin-bottom: $gutter * 4;
 
   &:last-child {
