--- a/sass/style.scss
+++ b/sass/style.scss
@@ -46,7 +46,7 @@
 // *
 // document
 // template styles when developing a document
-// @import "base/document";
+@import "base/document";
 
 // *
 // style guide
