--- a/sass/base/_document.scss
+++ b/sass/base/_document.scss
@@ -2,3 +2,184 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
+
+//////////////////////////////
+// # color swatches
+//////////////////////////////
+$pc-lightorange: #ffbca8;
+$pc-lightorange--plus: #fdaf96;
+
+$pc-lightindigo: #f0e6ff;
+$pc-indigo: #3b415d;
+$pc-darkindigo: #2f3345;
+$pc-ultradarkindigo: #1f2231;
+
+//////////////////////////////
+// # document header
+//////////////////////////////
+.pc-doc__header {
+  margin-bottom: 0;
+  padding-top: $gutter * 2;
+  padding-bottom: $gutter * 2;
+  background: $pc-ultradarkindigo;
+}
+
+.pc-doc__headline {
+  @include rev-text();
+  color: $white;
+  font-weight: normal;
+  letter-spacing: 0.1em;
+}
+
+//////////////////////////////
+// # document navigation
+//////////////////////////////
+.pc-doc__nav {
+  padding-top: $gutter * 2;
+  padding-bottom: $gutter * 4;
+  background:
+    linear-gradient(
+      45deg,
+      $pc-indigo,
+      $pc-darkindigo 90%
+    );
+
+  @include breakpoint($screen--m) {
+    margin-bottom: 0;
+    padding-top: $gutter * 3;
+    padding-bottom: $gutter * 6;
+  }
+
+  @include breakpoint($screen--l) {
+    padding-top: $gutter * 6;
+    padding-bottom: $gutter * 8;
+  }
+}
+
+.pc-doc__nav-list {
+  list-style: none;
+}
+
+.pc-doc__nav-item {
+  counter-increment: i;
+  margin-bottom: 0;
+  border-top: 1px solid $pc-darkindigo;
+  
+  &:last-child {
+    border-bottom: 1px solid $pc-darkindigo;
+  }
+}
+
+.pc-doc__nav-link {
+  display: block;
+  padding-top: 1.25em;
+  padding-right: $gutter;
+  padding-bottom: 1.25em;
+  padding-left: $gutter;
+  border-bottom: 0;
+
+  &::before {
+    content: counter(i);
+    display: inline-block;
+    vertical-align: baseline;
+    margin-right: 0.75em;
+    line-height: 1;
+    font-size: 0.65em;
+    color: $neutral-2;
+  }
+
+  &:hover,
+  &:focus {
+    background: $pc-indigo;
+    
+    .pc-doc__nav-link-label {
+      color: $white;
+    }
+  }
+
+  @include breakpoint($screen--m) {
+    padding-right: $gutter--m;
+    padding-left: $gutter--m;
+  }
+
+  @include breakpoint($screen--l) {
+    padding-right: $gutter--l;
+    padding-left: $gutter--l;
+  }
+}
+
+.pc-doc__nav-link-label {
+  @include rev-text();
+  color: $pc-lightindigo;
+  line-height: 1;
+  font-size: $font-size--s;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.15em;
+  transition: 0.1s;
+}
+
+//////////////////////////////
+// # document article area
+//////////////////////////////
+.pc-doc__article {
+  @include breakpoint($screen--m) {
+    padding-top: $gutter * 3;
+    padding-bottom: $gutter * 6;
+  }
+
+  @include breakpoint($screen--l) {
+    padding-top: $gutter * 6;
+    padding-bottom: $gutter * 8;
+  }
+}
+
+.pc-doc__article-core {
+  max-width: $screen--l;
+  padding-right: $gutter;
+  padding-left: $gutter;
+
+  @include breakpoint($screen--m) {
+    padding-right: $gutter * 2;
+    padding-left: $gutter * 2;
+  }
+
+  @include breakpoint($screen--l) {
+    padding-right: $gutter * 4;
+    padding-left: $gutter * 4;
+  }
+}
+
+//////////////////////////////
+// # document article section
+//////////////////////////////
+.pc-doc__section {
+  counter-increment: i;
+
+  &:first-child {
+    .pc-doc__section-textarea {
+      color: $neutral-1;
+      font-size: $font-size--m;
+      line-height: 1.25;
+    }
+  }
+}
+
+.pc-doc__section-header {
+  margin-bottom: $gutter * 2;
+  padding-top: 1.25em;
+  padding-bottom: 0.25em;
+  border-bottom: 2px solid $pc-lightorange;
+}
+
+.pc-doc__section-title {
+  font-weight: normal;
+  letter-spacing: 0.05em;
+
+  &::before {
+    content: counter(i);
+    display: inline-block;
+    margin-right: 0.75em;
+    color: $pc-lightorange--plus;
+  }
+}
