--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -8,11 +8,23 @@
 //////////////////////////////
 .row {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
 }
 
-.row--catalog {
-  flex-flow: row wrap;
+.row--m {
+  display: block;
+
+  @include breakpoint($screen--m) {
+    display: flex;
+  }
+}
+
+.row--l {
+  display: block;
+
+  @include breakpoint($screen--m) {
+    display: flex;
+  }
 }
 
 //////////////////////////////
@@ -42,7 +54,7 @@ $i: 1;
   $i: 1;
   @while $i <= $col-count {
     $flex-basis: unquote((100 / ($col-count / $i)) + "%");
-    .col--m#{$i} {
+    .col--m-#{$i} {
       flex: 0 1 $flex-basis;
     }
     .col--order-m#{$i} {
@@ -59,7 +71,7 @@ $i: 1;
   $i: 1;
   @while $i <= $col-count {
     $flex-basis: unquote((100 / ($col-count / $i)) + "%");
-    .col--l#{$i} {
+    .col--l-#{$i} {
       flex: 0 1 $flex-basis;
     }
     .col--order-l#{$i} {
