--- a/sass/utility/_variables.scss
+++ b/sass/utility/_variables.scss
@@ -27,16 +27,16 @@ $screen--xl: calc(#{$max-width} + (#{gutter} * 4));
 $font-pri: helvetica, arial, sans-serif;
 
 $font-size--s: 0.85em;
-$font-size--m: 1.25em;
-$font-size--l: 1.65em;
-$font-size--xl: 2em;
+$font-size--m: 1.125em;
+$font-size--l: 1.35em;
+$font-size--xl: 1.55em;
 
 //////////////////////////////
 // # color swatches
 //////////////////////////////
 $base: #111;
-$neutral-1: #666;
-$neutral-2: #999;
-$neutral-3: #ccc;
+$neutral-1: #333;
+$neutral-2: #777;
+$neutral-3: #ddd;
 $neutral-4: #eee;
 $white: #fff;
