--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,7 @@
 @import "breakpoint";
 @import "utility/mixins";
 @import "utility/font-face";
+@import "utility/variables";
 
 // *
 // element query (eq.js)
@@ -16,29 +17,15 @@
 // component appearance in different compositions
 // @import "utility/eq";
 
-//////////////////////////////
-// # variables
-//////////////////////////////
-@import "utility/variables";
-
-
-
-// # generic
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-@import "generic/reset";
-
-
 
 // # base
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
+@import "base/reset";
 @import "base/skeleton";
+@import "base/wrap";
 @import "base/grid";
-@import "base/title";
-@import "base/form";
 
 //////////////////////////////
 // # archetype
@@ -54,12 +41,10 @@
 // @import "base/styleguide";
 
 
-
 // # element
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
-
 
 
 // # component
@@ -68,17 +53,14 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-
 // # composition
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-
 // # page
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
-
 
