--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -2,16 +2,13 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
-
-//////////////////////////////
-// # row
-//////////////////////////////
-.row {
+.grid {
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
 }
 
-.row--m {
+.grid--m {
   display: block;
 
   @include breakpoint($screen--m) {
@@ -19,10 +16,10 @@
   }
 }
 
-.row--l {
+.grid--l {
   display: block;
 
-  @include breakpoint($screen--m) {
+  @include breakpoint($screen--l) {
     display: flex;
   }
 }
@@ -33,8 +30,28 @@
 .col {
   order: 1;
   min-width: 0;
+  padding-right: $gutter;
+  padding-left: $gutter;
+
+  @include breakpoint($screen--m) {
+    padding-right: $gutter--m;
+    padding-left: $gutter--m;
+  }
+
+  @include breakpoint($screen--l) {
+    padding-right: $gutter--l;
+    padding-left: $gutter--l;
+  }
 }
 
+.col--no-pad {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+//////////////////////////////
+// # grid generator
+//////////////////////////////
 // *
 // small screen (default)
 $i: 1;
@@ -58,10 +75,9 @@ $i: 1;
     .col--m-#{$i} {
       flex: 0 1 $flex-basis;
     }
-    .col--order-m#{$i} {
+    .col--order-m-#{$i} {
       order: $i;
     }
-
     $i: $i + 1;
   }
 }
@@ -75,33 +91,9 @@ $i: 1;
     .col--l-#{$i} {
       flex: 0 1 $flex-basis;
     }
-    .col--order-l#{$i} {
+    .col--order-l-#{$i} {
       order: $i;
     }
     $i: $i + 1;
   }
-}
-
-//////////////////////////////
-// # core
-//////////////////////////////
-.col__core {
-  height: 100%;
-  padding-right: $gutter;
-  padding-left: $gutter;
-
-  @include breakpoint($screen--m) {
-    padding-right: $gutter--m;
-    padding-left: $gutter--m;
-  }
-
-  @include breakpoint($screen--l) {
-    padding-right: $gutter--l;
-    padding-left: $gutter--l;
-  }
-}
-
-.col__core--no-pad {
-  padding-right: 0;
-  padding-left: 0;
 }
