--- a/sass/base/_wrap.scss
+++ b/sass/base/_wrap.scss
@@ -1,4 +1,9 @@
-// # mixins
+// # wrap
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
+.wrap {
+  max-width: $max-width;
+  margin-right: auto;
+  margin-left: auto;
+}
