--- a/sass/utility/_variables.scss
+++ b/sass/utility/_variables.scss
@@ -8,9 +8,9 @@
 //////////////////////////////
 $col-count: 12;
 
-$gutter: 0.75em;
-$gutter--m: 1em;
-$gutter--l: 1.25em;
+$gutter: 1em;
+$gutter--m: 1.5em;
+$gutter--l: 2em;
 
 //////////////////////////////
 // # media size
@@ -30,6 +30,8 @@ $font-size--s: 0.85em;
 $font-size--m: 1.125em;
 $font-size--l: 1.35em;
 $font-size--xl: 1.55em;
+
+$line-height: 1.4;
 
 //////////////////////////////
 // # color swatches
