--- a/sass/base/_skeleton.scss
+++ b/sass/base/_skeleton.scss
@@ -24,10 +24,6 @@ body {
 
 header, nav, article, section, aside, footer {
   margin-bottom: $gutter * 2;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
 
 hr {
@@ -50,10 +46,6 @@ h1, h2, h3, h4, h5, h6 {
 ul, ol {
   list-style-position: inside;
   margin-bottom: $gutter;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
 
 ul ol, ul ul, ol ol, ol ul {
@@ -67,18 +59,10 @@ ol ol {
 
 li {
   margin-bottom: 0.25em;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
 
 dl {
   margin-bottom: $gutter;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
 
 dt {
@@ -88,10 +72,6 @@ dt {
 
 dd {
   margin-bottom: 1em;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
 
 //////////////////////////////
@@ -99,10 +79,6 @@ dd {
 //////////////////////////////
 p {
   margin-bottom: $gutter;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
 
 strong, b {
@@ -141,10 +117,6 @@ mark {
 blockquote {
   margin-bottom: $gutter;
 
-  &:last-child {
-    margin-bottom: 0;
-  }
-
   &:before { content: "\201C"; }
   &:after  { content: "\201D"; }
 }
@@ -177,10 +149,6 @@ figure, picture, img {
   display: block;
   width: 100%;
   margin-bottom: $gutter;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
 
 figcaption {
@@ -223,12 +191,9 @@ th, td {
 //////////////////////////////
 // # form
 //////////////////////////////
+form,
 fieldset {
   margin-bottom: $gutter;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
 
 legend {
@@ -241,28 +206,55 @@ label {
 }
 
 textarea, select, input {
+  border-top: 1px solid $neutral-3;
+  border-right: 1px solid $neutral-3;
+  border-bottom: 1px solid $neutral-3;
+  border-left: 1px solid $neutral-3;
+  font-family: inherit;
   line-height: 1.4;
 }
 
-textarea, select, input[type="text"], input[type="password"], input[type="number"], input[type="date"], input[type="color"], input[type="range"], input[type="month"], input[type="week"], input[type="time"], input[type="datetime"], input[type="datetime-local"], input[type="email"], input[type="search"], input[type="tel"], input[type="url"] {
+textarea,
+select,
+input[type="text"],
+input[type="password"],
+input[type="number"],
+input[type="date"],
+input[type="color"],
+input[type="range"],
+input[type="month"],
+input[type="week"],
+input[type="time"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="search"],
+input[type="tel"],
+input[type="url"] {
   display: block;
   width: 100%;
   padding-top: 0.25em;
   padding-left: 0.5em;
   padding-bottom: 0.25em;
   padding-right: 0.5em;
-  border-top: 1px solid $neutral-3;
-  border-right: 1px solid $neutral-3;
-  border-bottom: 1px solid $neutral-3;
-  border-left: 1px solid $neutral-3;
 }
 
-$form_placeholder_prefixes: ('::-webkit-input-placeholder', ':-moz-placeholder', '::-moz-placeholder', ':-ms-input-placeholder', '::input-placeholder', '::placeholder' );
+$form_placeholder_prefixes: (
+  '::-webkit-input-placeholder',
+  ':-moz-placeholder',
+  '::-moz-placeholder',
+  ':-ms-input-placeholder',
+  '::input-placeholder',
+  '::placeholder' );
 @each $prefix in $form_placeholder_prefixes {
   input[placeholder]#{$prefix},
   textarea[placeholder]#{$prefix} {
     color: $neutral-2;
   }
+}
+
+textarea {
+  resize: vertical;
 }
 
 input {
