--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,6 +51,7 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
+@import "component/preloader";
 
 
 // # composition
