[1.0.6] update configuration, update preloader script
- update configuration, animation library changed to Tweenlite instead
of previous Velocity
- remove redundant eq.js script
- update preloader class to facilitate transition with Tweenlite

--- a/sass/component/_preloader.scss
+++ b/sass/component/_preloader.scss
@@ -14,7 +14,7 @@
   padding-left: $gutter;
   padding-bottom: $gutter;
   padding-right: $gutter;
-  background: lightblue;
+  background: $white;
 
   @include breakpoint($screen--m) {
     padding-top: $gutter--m;
@@ -35,7 +35,6 @@
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-  background: purple;
 }
 
 .preloader__whirligig {
@@ -49,6 +48,8 @@ body {
   // *
   // js enhancement
   .js & {
+    position: relative;
+    z-index: 1000;
     overflow: hidden;
   }
 }
