[1.0.7] add whirligig element
- add whirligig element, referenced from Tobias Ahlin – SpinKit: cube
grid
- add whirligig to preloader component
- update preloader component

--- a/sass/component/_preloader.scss
+++ b/sass/component/_preloader.scss
@@ -31,14 +31,9 @@
   }
 }
 
-.preloader__whirligig-wrap {
+.preloader__icon {
   display: table-cell;
   vertical-align: middle;
-  text-align: center;
-}
-
-.preloader__whirligig {
-  display: inline-block;
 }
 
 //////////////////////////////
