--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,6 +41,7 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
+@import "element/whirligig";
 
 
 
